--- a/ExemplePlugin/.classpath
+++ b/ExemplePlugin/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Jeremy/git/ExemplePlugin/ExemplePlugin/bukkit-1.5.2-R0.2-20130606.060103-11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Emmanuel/Downloads/A garder/plugindev/api/bukkit-1.5.2-R0.2-20130606.060103-11.jar"/>
+	<classpathentry kind="lib" path="//JEREMY-PC/Minecraft_Server/Serveur Bukkit/Workspace/api/bukkit-1.5.2-R0.2-20130608.060131-12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
