modif exemple.java modif second listenner ajout second command listenner

--- a/ExemplePlugin/plugin.yml
+++ b/ExemplePlugin/plugin.yml
@@ -5,3 +5,6 @@ commands:
    exemple:
       description: Informations sur le plugin.
       usage: /<command>
+   getPet:
+      description: Donne un oeuf permettant de faire aparaitre un pet.
+      usage: /<command>
